--- a/djangoapp/requirements.txt
+++ b/djangoapp/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.7.2
-Django==.0.2
+Django==5.0.2
 psycopg2-binary==2.9.9
 python-dateutil==2.8.2
 six==1.16.0
@@ -8,3 +8,4 @@ pillow==10.2.0
 django-summernote==0.8.20.0
 python-dotenv==1.0.1
 django-axes==6.3.0
+python-dotenv==1.0.1
